Правка 3-го уровня меню на десктопе

--- a/шаблон — страница с ценами.html
+++ b/шаблон — страница с ценами.html
@@ -42,7 +42,23 @@
                                     <li class="uk-active uk-parent">
                                         <a href="#">Активное<span class="uk-nav-parent-icon icon-menu-tree"></span></a>
                                         <div class="uk-navbar-dropdown header-menu-second">
-                                            <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
+                                            <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position menu-slide-3">
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Активное</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Элемент списка</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Пункт меню</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Продолжаем</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Активное</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Элемент списка</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Пункт меню</a></li>
+                                                <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
+                                                        Продолжаем</a></li>
                                                 <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
                                                         Активное</a></li>
                                                 <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
@@ -52,14 +68,13 @@
                                                 <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
                                                         Продолжаем</a></li>
 
-
                                             </ul>
                                         </div>
                                     </li>
                                     <li class="uk-parent"><a href="#">Элемент списка<span
                                                 class="uk-nav-parent-icon icon-menu-tree"></span></a>
                                         <div class="uk-navbar-dropdown header-menu-second">
-                                            <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position">
+                                            <ul class="uk-nav uk-navbar-dropdown-nav header-menu-second-position menu-slide-3">
                                                 <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
                                                         Активное</a></li>
                                                 <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
@@ -119,15 +134,16 @@
                                 <div class="menu-mobile-title">Меню <a href="#offcanvas-slide"
                                         class="button-menu header-buttons-menu-close" uk-toggle></a></div>
                                 <div class="menu-mobile-reg">
-                                    <a class="" title="Личный кабинет" href="https://stage.nyutonika.ru/cabinet">Личный кабинет</a>
+                                    <a class="" title="Личный кабинет" href="https://stage.nyutonika.ru/cabinet">Личный
+                                        кабинет</a>
                                     <a href="https://stage.nyutonika.ru/register">
-                                         Регистрация 
+                                        Регистрация
                                     </a>
                                     <a href="https://stage.nyutonika.ru/login">
-                                       Войти на урок 
+                                        Войти на урок
                                     </a>
                                     <form action="https://stage.nyutonika.ru/logout" method="post">
-                                         <button type="submit" class=" ">Выйти</button>
+                                        <button type="submit" class=" ">Выйти</button>
                                     </form>
                                 </div>
                                 <ul class="uk-nav-default menu-mobile" uk-nav>
