Правка на странице направлений

--- a/страница направлений.html
+++ b/страница направлений.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="">
+    <div class="wrapper-1">
         <header uk-sticky>
 
             <section class="header container">
