Удаление прокручивания отзывов

--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
                 ученики и их родители</h3>
 
             <ul class="uk-subnav uk-subnav-pill uk-flex-center section-eight-reviews"
-                uk-switcher="connect: #switcher-id">
+                uk-switcher="connect: #switcher-id; swiping:false;">
                 <li><a class="tab-button-reviews" href="#">Видео</a></li>
                 <li><a class="tab-button-reviews" href="#">Отзывы</a></li>
             </ul>
@@ -1343,7 +1343,7 @@
                         <!-- 8 секция Видео-->
                         <li>
                             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
-                                uk-slider="autoplay: /*true; autoplay-interval: 3000">
+                                uk-slider="autoplay: true; autoplay-interval: 3000">
                                 <ul
                                     class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid-small">
                                     <li>
