--- a/страница-помощь-с-домашними-заданиями2.html
+++ b/страница-помощь-с-домашними-заданиями2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/uikit-rtl.css">
     <link rel="stylesheet" href="css/uikit.css">
-
+    <meta property="og:image" content="https://cdn.nyutonika.ru/images/prevew.jpg" />
     <link rel="stylesheet" href="css/custom-style.css">
     <link rel="stylesheet" href="css/style.css">
 
