Правка карточки ЛК Ньютоника
Карточка Последние занятия из ЛК Родителя. Правка отступов в шапке карточки, правка лейблов, поля для звездочек или подписей

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -125,7 +125,7 @@
             </div>
             <div class="page-lk">
                 <div class="uk-flex-between  uk-flex title-lk">
-                    <h1 class="uk-text-left uk-margin-top">Личный кабинет родителя</h1>
+                    <h1 class="uk-text-left uk-margin-top">Личный кабинет</h1>
 
                     <div class="buttons-title-lk">
                         <a class="pay-lk" href="">Оплатить занятия</a><button class="danger-lk" href=""
@@ -190,13 +190,9 @@
                         <li>
                             <div class="card-lk color-recent-classes-card">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02
-                                    <div>
+                                    <div class="card-lk_title-pay">
                                         <div class="star-wrapper">
-                                            <a href="#" class="fas fa-star s1"></a>
-                                            <a href="#" class="fas fa-star s2"></a>
-                                            <a href="#" class="fas fa-star s3"></a>
-                                            <a href="#" class="fas fa-star s4"></a>
-                                            <a href="#" class="fas fa-star s5"></a>
+                                            Нет оценки
                                         </div>
                                         <span class="payment-error">Ошибка оплаты</span>
                                     </div>
@@ -212,13 +208,57 @@
                         <li>
                             <div class="card-lk color-recent-classes-card">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02
-                                    <div>
+                                    <div class="card-lk_title-pay">
                                         <div class="star-wrapper">
-                                            Моя оценка: <span class="rating1"></span>
+                                            Нет оценки
                                         </div>
                                         <script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
 
-                                        <span class="return-issued">Возврат офрмлен</span>
+                                        <span class="return-issued label-height">Возврат оформлен</span>
+                                    </div>
+                                </div>
+                                <div class="card-lk_content">
+                                    <p><span>Ученик:</span>Тестовый ученик 1</p>
+                                    <p><span>Преподаватель:</span>Тестовый логопед</p>
+                                    <p><span>Предмет:</span>Русский язык</p>
+                                </div>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk color-recent-classes-card">
+                                <div class="card-lk_title">Занятие от 04.05.23 10:02
+                                    <div class="card-lk_title-pay">
+                                        <div class="star-wrapper">
+                                            Моя оценка: <span class="rating5"></span>
+                                        </div>
+                                        <script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
+
+                                        <span class="payment-made">Оплачено</span>
+                                    </div>
+                                </div>
+                                <div class="card-lk_content">
+                                    <p><span>Ученик:</span>Тестовый ученик 1</p>
+                                    <p><span>Преподаватель:</span>Тестовый логопед</p>
+                                    <p><span>Предмет:</span>Русский язык</p>
+                                </div>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk color-recent-classes-card">
+                                <div class="card-lk_title">Занятие от 04.05.23 10:02
+                                    <div class="card-lk_title-pay">
+                                        <div class="star-wrapper">
+                                            <a href="#" class="fas fa-star s1"></a>
+                                            <a href="#" class="fas fa-star s2"></a>
+                                            <a href="#" class="fas fa-star s3"></a>
+                                            <a href="#" class="fas fa-star s4"></a>
+                                            <a href="#" class="fas fa-star s5"></a>
+                                        </div>
+                                        <script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
+
+                                        <span class="payment-made">Оплачено</span>
                                     </div>
                                 </div>
                                 <div class="card-lk_content">
