Состояние чекбокса на слотах

--- a/шаблон — личный кабинет — слоты-педагог.html
+++ b/шаблон — личный кабинет — слоты-педагог.html
@@ -147,7 +147,7 @@
                                     <div class="slots_time-item">6:00</div>
                                     <div class="">
                                         <input type="hidden" name="date">
-                                        <input class="uk-checkbox" type="checkbox">
+                                        <input class="uk-checkbox occupied" type="checkbox" disabled>
                                     </div>
                                 </div>
                             </form>
@@ -156,7 +156,7 @@
                                     <div class="slots_time-item">7:00</div>
                                     <div class="">
                                         <input type="hidden" name="date">
-                                        <input class="uk-checkbox" type="checkbox">
+                                        <input class="uk-checkbox occupied" type="checkbox">
                                     </div>
                                 </div>
                             </form>
