--- a/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
@@ -365,10 +365,7 @@
                         </div>
                     </form>
                 </div>
-               
-
-
-
+                <div class="uk-padding-small"></div>
             </div>
         </section>
     </div>
