Блок с информацией в личном кабинете

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -135,7 +135,16 @@
 
 
                 </div>
-
+                 
+                <div class="info-block uk-padding-remove uk-margin-remove"  uk-alert>
+                    <a class="uk-alert-close" href uk-close></a>
+                    <div class="slot-info uk-margin-bottom"><span class="h4 uk-padding-remove">Важная информация</span></div>
+                    <div class="areas-of-work uk-margin-remove">
+                        <div class="napravlenia_textblock uk-padding-remove">Информируем Вас о том, что с 1 января 2025 года повышается стоимость занятий на 20%. <br>
+                        Чтобы сэкономить - предлагаем заранее приобрести пакет на необходимое количество занятий до 1 января. <br>
+                        Пакетные предложения не сгорают.</div>
+                    </div>
+                </div>
 
                 <div class="uk-margin-large-top">
                     <h2>Ближайшие занятия</h2>
