Дополнительная карточка для первого пакета ЛК

--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -166,6 +166,18 @@
                             </div>
                         </li>
                         <li>
+                            <div class="card-lk activity-packages packag-one">
+                                <div class="lable-sale-one"><span></span>
+                                </div>
+                                <div class="activity-packages_title">Пакет из 8 занятий</div>
+                                <div class="activity-packages_content">
+                                    <p class="activity-packages_content_pricetext">Цена:</p>
+                                    <p class="activity-packages_content_price"><span>3400</span>руб.</p>
+                                </div>
+                                <button type="submit" class="card-lk_button_activity-packages">Купить</button>
+                            </div>
+                        </li>
+                        <li>
                             <div class="card-lk activity-packages packag3">
                                 <div class="activity-packages_title">Пакет из 8 занятий</div>
                                 <div class="activity-packages_content">
