--- a/шаблон — личный кабинет — слоты-педагог.html
+++ b/шаблон — личный кабинет — слоты-педагог.html
@@ -141,7 +141,7 @@
                         <div class="slots_data">
                             10.10.2023
                         </div>
-                        <div class="slots_time">
+                        <div class="slots_time slots_time_col_8">
                             <form>
                                 <div class="">
                                     <div class="slots_time-item">6:00</div>
@@ -310,7 +310,7 @@
                         <div class="slots_data">
                             11.10.2023
                         </div>
-                        <div class="slots_time">
+                        <div class="slots_time slots_time_col_6">
                             <form>
                                 <div class="">
                                     <div class="slots_time-item">6:00</div>
@@ -479,7 +479,7 @@
                         <div class="slots_data">
                             12.10.2023
                         </div>
-                        <div class="slots_time">
+                        <div class="slots_time slots_time_col_6">
                             <form>
                                 <div class="">
                                     <div class="slots_time-item">6:00</div>
@@ -648,7 +648,7 @@
                         <div class="slots_data">
                             13.10.2023
                         </div>
-                        <div class="slots_time">
+                        <div class="slots_time slots_time_col_6">
                             <form>
                                 <div class="">
                                     <div class="slots_time-item">6:00</div>
