Галочка для дополнительных слотов

--- a/шаблон — личный кабинет — слоты-педагог.html
+++ b/шаблон — личный кабинет — слоты-педагог.html
@@ -133,6 +133,15 @@
             </div>
             <div class="page-lk">
                 <h1 class="uk-text-left uk-margin-top">Слоты занятий</h1>
+                <form class="uk-margin-top" action="#" method="POST">
+                    <fieldset class="uk-fieldset">
+                            <div class="standart-checkbox-block">
+                                <input class="uk-checkbox standart-checkbox" type="checkbox">
+                                <label class="uk-form-label" data-for="form_agree">
+                                Показывать дополнительные интервалы</label>
+                            </div>
+                </fieldset>
+            </form>
                 <p class="slot-info">
                     Отметьте галочками свободное время для проведения пробных уроков по Вашему локальному времени
                 </p>
