Правка на последних занятиях кебаб

--- a/шаблон — личный кабинет — последние занятия — педагог2.html
+++ b/шаблон — личный кабинет — последние занятия — педагог2.html
@@ -138,9 +138,8 @@
                 <h1 class="uk-text-left uk-margin-top">Последние занятия</h1>
                 <div class="uk-margin-large-top">
                     <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s"
-                        uk-sortable="handle: .card-lk" uk-grid>
+                        uk-grid>
                         <li>
-
                             <div class="card-lk color-next-class-card educator">
                                 <ul class="nav nav-kebab">
                                     <div class="kebab">
@@ -177,7 +176,44 @@
                             </div>
 
                         </li>
-                       
+                        <li>
+                            <div class="card-lk color-next-class-card educator">
+                                <ul class="nav nav-kebab">
+                                    <div class="kebab">
+                                        <figure></figure>
+                                        <figure class="middle"></figure>
+                                        <div class="cross">x</div>
+                                        <figure></figure>
+                                        <ul class="dropdown">
+                                            <li><button>Отменить</button></li>
+                                            <li><a href="">Написать о проблеме</a></li>
+                                            <li><a href="">Вернуть средства</a></li>
+                                        </ul>
+                                    </div>
+                                </ul>
+                                <div class="card-lk_title card-lk_title-kebab">
+
+                                    <div class="card-lk_title-data card-lk_title-data-kebab">
+                                        <div>Занятие</div>
+                                        <div>04.05.23 10:02</div>
+
+                                    </div>
+                                    <div class="card-lk_title-pay">
+                                        <span class="payment-error">Ошибка оплаты</span>
+                                    </div>
+
+                                </div>
+
+                                <div class="card-lk_content educator-info">
+                                    <p><span>Ученик:</span>Тестовый ученик 1</p>
+                                    <p><span>Преподаватель:</span>Тестовый логопед</p>
+                                    <p><span>Предмет:</span>Русский язык</p>
+                                </div>
+
+                            </div>
+
+                        </li>
+                      <!--
                         <li>
                             <div class="card-lk color-next-class-card educator">
                                 <div class="card-lk_title">
@@ -337,7 +373,7 @@
 
                             </div>
                         </li>
-
+--> 
 
 
 
