Правка в шапке на десктопе
Доп строка под телефоном, изменение стилей, кнопка Вход

--- a/шаблон — с кнопкой выхода.html
+++ b/шаблон — с кнопкой выхода.html
@@ -83,14 +83,14 @@
                     </ul><!-- Навигация, ссылки -->
                     <div class="uk-navbar-item header-phone"> <!-- Отдельный контейнер -->
                         <a href="tel:+78007753795">8 (800) 775-37-95</a>
-                        <div class="header-phone_text"></div>
+                        <div class="header-phone_text">Работаем круглосуточно</div>
                     </div>
                     <div class="uk-navbar-item header-buttons">
                         <!-- Контейнер с кнопкой входа-выхода десктоп   "entry" для входа, "exit" для выхода-->
                         <button
                             class="uk-button uk-button-default button-one uk-margin-small-right entry">Регистрация</button>
 
-                        <button class="uk-button uk-button-primary button-two entry">Войти на урок</button>
+                        <button class="uk-button uk-button-primary button-two entry">Войти</button>
                         <a class="button-menu-lk-en exit" title="Личный кабинет" href=""></a>
                         <button class="uk-button uk-button-primary button-two exit">Выйти</button>
                     </div>
