Правки в шапке на планшетной версии

--- a/шаблон — с кнопкой выхода.html
+++ b/шаблон — с кнопкой выхода.html
@@ -103,8 +103,9 @@
                             <a href=""><img src="https://cdn.nyutonika.ru/svg/logo.svg"></a>
                         </div>
                         <!-- Контейнер с кнопкой входа-выхода планшет и мобилка  "entry" для входа, "exit" для выхода-->
-                        <a class="uk-button button-two button-one-mobile-header uk-margin-small-right entry">Войти на
-                            урок</a>
+                      <!-- <a class="uk-button button-two button-one-mobile-header uk-margin-small-right entry">Войти на
+                            урок</a>--> 
+                            <div class="header-phone_text">Работаем круглосуточно</div>
                         <a class="uk-button button-two button-one-mobile-header uk-margin-small-right exit">Выйти</a>
                         <div class="mobile-buttons-block">
                             <a class="button-menu-lk entry" href=""></a>
