Правка в шапке для мобильной версии

--- a/шаблон — с кнопкой выхода.html
+++ b/шаблон — с кнопкой выхода.html
@@ -101,6 +101,7 @@
                     <div class="header container header-mobile uk-margin-small-top uk-margin-small-bottom" uk-navbar>
                         <div class="header-logo">
                             <a href=""><img src="https://cdn.nyutonika.ru/svg/logo.svg"></a>
+                            <div class="header-work">Работаем круглосуточно</div>
                         </div>
                         <!-- Контейнер с кнопкой входа-выхода планшет и мобилка  "entry" для входа, "exit" для выхода-->
                       <!-- <a class="uk-button button-two button-one-mobile-header uk-margin-small-right entry">Войти на
@@ -209,9 +210,9 @@
                             </div>
                         </div>
                     </div>
-
+<!--
                     <a class="uk-button button-two-mobile-header uk-margin-small-right entry">Войти на урок</a>
-
+-->
                 </nav>
             </section>
         </header>
