Правка для модального окна с формой

--- a/шаблон — модальное окно с формой.html
+++ b/шаблон — модальное окно с формой.html
@@ -233,10 +233,11 @@
                     <div class="uk-flex uk-flex-center">
                         <h4 class="uk-width-large uk-text-center">Дарим первый урок с репетитором бесплатно</h4>
                     </div>
-                    
+                   
                         <form class="form-leave-request uk-margin-remove">
                             <div class="uk-text-center">
                                 <label class="uk-form-label uk-margin-remove">Оставьте заявку и получите первый урок в подарок</label>
+                                <h5 class="uk-width-large uk-text-center">Работаем круглосуточно</h5>
                                 <div class="uk-form-controls uk-margin-top">
                                     <input class="uk-input uk-margin-remove-left uk-margin-remove-right" name="Имя" type="text" placeholder="Ваше ФИО" required>
                                 </div>
